updating video, removing invisible header in nav (accessibility issue)

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -121,6 +121,7 @@
 
 .navbarLeftText h2 {
   margin: 0;
+  margin-top: 0.8rem;
   font-weight: 400;
   font-size: 1.4rem;
   line-height: 1.4rem;
